src/objects/TPA_Request__c.object
<CustomObject>
    <fields>
        <fullName>Always_approved_Use_Offering_Combination__c</fullName>
        <description>Always approved Use/Offering Combinations.</description>
        <label>Always approved Use/Offering Combination</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Amended_Record_Count__c</fullName>
        <description>Created By TPA Module Under TPA-FEATURE-5</description>
        <label>Amended Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approve_Atypical_Use_Offerings__c</fullName>
        <description>Created By TPA Module Under TPA-FEATURE-5</description>
        <formula>IF(  Is_ATypical_Combination_Present__c  ,
HYPERLINK(&quot;/apex/VFP_TPA_AtypUseOffMnnualReview?requestId=&quot;&amp; Id +&quot;&amp;retURL=/&quot;&amp;Id, IMAGE(&quot;/resource/Approve_Atypical_Use_Offerings&quot;, &quot;Approve Atypical Use Offerings&quot;), &quot;_self&quot;), 
null)</formula>
        <label>Approve Atypical Use Offerings</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Arbitration_Attachment_Version__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Arbitration_Attachment_Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Are_Banner_Ads_Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>checkbox for whether banner ads is selected or not</description>
        <label>Are Banner Ads Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_TP_Processor_Initials__c</fullName>
        <formula>IF(ISBLANK(TPA_Assigned_TP_Processor__c), &apos;(TBD) &apos;, &apos;(&apos; &amp; TPA_Assigned_TP_Processor__r.Initials__c &amp; &apos;) &apos;)</formula>
        <label>Assigned TP-Processor Initials</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_TP_Processor__c</fullName>
        <label>Assigned TP-Processor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Adela Pavelkova - AP</fullName>
                </value>
                <value>
                    <fullName>Alexandra Zabaras - AZ</fullName>
                </value>
                <value>
                    <fullName>Amanda Melo - AM</fullName>
                </value>
                <value>
                    <fullName>Asta Akstiniene - AA</fullName>
                </value>
                <value>
                    <fullName>Brendan Ryan - BR</fullName>
                </value>
                <value>
                    <fullName>Candace Werkheiser - CW</fullName>
                </value>
                <value>
                    <fullName>Candice EastonBerry - CE</fullName>
                </value>
                <value>
                    <fullName>Caroline Oliver - CO</fullName>
                </value>
                <value>
                    <fullName>Cindy Anfield - CA</fullName>
                </value>
                <value>
                    <fullName>Claudio Pinna - CP</fullName>
                </value>
                <value>
                    <fullName>Daniela Candeliere - DC</fullName>
                </value>
                <value>
                    <fullName>DLIR-JP-TP-Processor - DLIR</fullName>
                </value>
                <value>
                    <fullName>Donna Shine - DS</fullName>
                </value>
                <value>
                    <fullName>Etsuko Isogai - EI</fullName>
                </value>
                <value>
                    <fullName>Evgenia Galitsyna - EG</fullName>
                </value>
                <value>
                    <fullName>Florentina Moraru - FM</fullName>
                </value>
                <value>
                    <fullName>Gaby Pitzer - GP</fullName>
                </value>
                <value>
                    <fullName>Gaurav Pokharna - GP</fullName>
                </value>
                <value>
                    <fullName>Geraldine Mambo-Avoune - GA</fullName>
                </value>
                <value>
                    <fullName>Helena Frois - HF</fullName>
                </value>
                <value>
                    <fullName>Hind Kabbaj - HK</fullName>
                </value>
                <value>
                    <fullName>Hristiyana Lazarova - HL</fullName>
                </value>
                <value>
                    <fullName>Iciar Benito - IB</fullName>
                </value>
                <value>
                    <fullName>Iris Lopez - IL</fullName>
                </value>
                <value>
                    <fullName>Iris Tan - IT</fullName>
                </value>
                <value>
                    <fullName>Irma Hamilton - IH</fullName>
                </value>
                <value>
                    <fullName>Isolde Belli - IB</fullName>
                </value>
                <value>
                    <fullName>Iva Bogdanova - IB</fullName>
                </value>
                <value>
                    <fullName>Izabela Komornicka - IK</fullName>
                </value>
                <value>
                    <fullName>Jackie Mackin - JM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Authorized_Signer_Email__c</fullName>
        <label>Authorized Signer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Authorized_Signer_First_Name__c</fullName>
        <label>Authorized Signer First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorized_Signer_Full_Name__c</fullName>
        <formula>Authorized_Signer_First_Name__c &amp; &apos; &apos; &amp; Authorized_Signer_Last_Name__c</formula>
        <label>Authorized Signer Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorized_Signer_Last_Name__c</fullName>
        <label>Authorized Signer Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorized_Signer_Name__c</fullName>
        <description>Created By TPA Module Under TPA-FEATURE-5</description>
        <formula>Authorized_Signer_First_Name__c + &apos; &apos; + Authorized_Signer_Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Authorized Signer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorized_Signer_Title__c</fullName>
        <label>Authorized Signer Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_to_Business_relationships_IDN__c</fullName>
        <description>Created by Ranu ER-905</description>
        <label>Business to Business relationships</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Please select from the below</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_to_Professional_relationships__c</fullName>
        <description>Created by Ranu ER-905</description>
        <label>Business to Professional relationships</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Please select from the below</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPC_Expiration_Notice_Sent_Last_Date__c</fullName>
        <label>CPC Expiration Notice Sent Last Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CPC_Expiration_Postnotice_Sent_Last_Date__c</fullName>
        <label>CPC Expiration Postnotice Sent Last Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CPC_Renewal_Notice_Sent_Last_Date__c</fullName>
        <label>CPC Renewal Notice Sent Last Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Canadian_Assets_Info__c</fullName>
        <inlineHelpText>Do the Canadian data assets selected include information derived from Ontario Drug Benefits (ODB), Non-insured Health Benefits (NIHB) or Alberta data?</inlineHelpText>
        <label>Canadian Assets Info</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields> 
        <fullName>Cancelation_Pending_Notice_Sent_Date__c</fullName>
        <description>Created under ER-3836</description>
        <label>Cancelation Pending Notice Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cancelled__c</fullName>
        <label>Cancelled</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Category_of_Offerings__c</fullName>
        <label>Category of Offerings</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Check_Use_Definition_Extension__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created By TPA Module Under TPA-FEATURE-5</description>
        <label>Check Use Definition Extension</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ClientContacSameAsInitiator__c</fullName>
        <label>Client Contact Same As Initiator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Please select from the below</fullName>
                </value>
                <value>
                    <fullName>Please Select a Value</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClientContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client TPA Requestor Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>TPA Requests(Client)</relationshipLabel>
        <relationshipName>TPA_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Account_Region_For_TLLA__c</fullName>
        <formula>Client_Address__r.Region_Territory__c</formula>
        <label>Client Account Region For TLLA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Address__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Client</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>TPA Requests (Client)</relationshipLabel>
        <relationshipName>TPA_Requests_Address</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Billing_Address__c</fullName>
        <description>Created By TPA Module Under TPA-FEATURE-5</description>
        <formula>Client_Address__r.Street__c+&apos;, &apos;+Client_Address__r.City__c+&apos;, &apos;+ Client_Address__r.State__c+&apos;, &apos;+Client_Address__r.PostalCode__c+&apos;, &apos;+TEXT(Client_Address__r.Country__c)</formula>
        <label>Client Billing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Company_Name_Address__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Client Company Name</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>TPA Requests (Client Company Name)</relationshipLabel>
        <relationshipName>TPA_Requests2_Address</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Confirmation_Req_Form_Sent_Date__c</fullName>
        <label>Expert Analysis Use Form Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Client_Confirmation_Req_Response_Date__c</fullName>
        <label>Expert Analysis Use Response Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Client_Confirmation_Requested_Response__c</fullName>
        <label>Expert Analysis Use Response</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Disclosure to external legal counsel solely for purposes of obtaining internal legal advice</fullName>
                </value>
                <value>
                    <fullName>Disclosure to a retained expert or consultant solely for purposes of obtaining internal expert analysis</fullName>
                </value>
                <value>
                    <fullName>Disclosure to other litigants, experts, attorneys, etc. in connection with legal proceedings</fullName>
                </value>
                <value>
                    <fullName>Disclosure for governmental purposes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Contact_Territory__c</fullName>
        <label>Requesting Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Cayman Islands</fullName>
                </value>
                <value>
                    <fullName>Central America</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>Costa Rica</fullName>
                </value>
                <value>
                    <fullName>Croatia</fullName>
                </value>
                <value>
                    <fullName>Cyprus</fullName>
                </value>
                <value>
                    <fullName>Czech Republic</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>Dominican Republic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TPA Client Contact</label>
        <referenceTo>TPA_Contact__c</referenceTo>
        <relationshipLabel>TPA Requests</relationshipLabel>
        <relationshipName>Client_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Department__c</fullName>
        <label>Client Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Email__c</fullName>
        <formula>ClientContact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client TPA Requestor Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Expired_Early__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ealy Expiration form Client</description>
        <label>Client Expired Early</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_First_Name__c</fullName>
        <formula>ClientContact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Full_Name__c</fullName>
        <formula>Client_Address__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_ISA_Number__c</fullName>
        <label>Client ISA Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Language__c</fullName>
        <label>Client Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Last_Name__c</fullName>
        <formula>ClientContact__r.LastName</formula>
        <label>Client Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Name_Local__c</fullName>
        <description>Holds Name of the client before migration to IQVIA</description>
        <label>Client Name Local</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Name__c</fullName>
        <description>Created By TPA Module Under TPA-FEATURE-5</description>
        <formula>Client_Address__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client_Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Off_Notification_Ack_Date__c</fullName>
        <label>Client Off Notification Ack Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Client_Project_Name__c</fullName>
        <label>Client Project Name</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Region__c</fullName>
        <inlineHelpText>Select the region associated with the requesting client&apos;s global location. Used internally by IMS to ensure the request is processed by the appropriate IMS global resources.</inlineHelpText>
        <label>Client Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Latin America</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>North Europe and Africa</fullName>
                </value>
                <value>
                    <fullName>South Europe and ME</fullName>
                </value>
                <value>
                    <fullName>Central Europe</fullName>
                </value>
                <value>
                    <fullName>East Europe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Request_Submission__c</fullName>
        <label>Client Request Submission</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Client_Set_Earlier_Expiry_Date__c</fullName>
        <description>Early Expiry Date provided by Client</description>
        <inlineHelpText>Date of Early Expiry</inlineHelpText>
        <label>Client Set Earlier Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Client_Submission_to_Vendor_Sub_Delay__c</fullName>
        <formula>Vendor_App_Submitted__c -  Client_Request_Submission__c</formula>
        <label>Client Submission to Vendor Sub Delay</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client_TPA_Representative_Email__c</fullName>
        <label>Client TPA Representative Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_TPA_Representative_Name__c</fullName>
        <label>Client TPA Representative Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_TPA_Representative_Title__c</fullName>
        <label>Client TPA Representative Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clone__c</fullName>
        <formula>HYPERLINK(&quot;https://iqvia.my.site.com/imshealthPortal/List_View?Id=&quot;&amp;Id&amp;&quot;&amp;name=clone&quot;, &quot;Clone&quot;,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Clone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Signed_By_Unlisted__c</fullName>
        <description>Created By TPA Module Under TPA-FEATURE-5</description>
        <label>Company Signed By (Unlisted)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitive_Service_to_IMS_Offerings_2__c</fullName>
        <description>TPA-MC-ESPSFDCTPA-454</description>
        <label>Prod/Service in design or future release</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitive_Service_to_IMS_Offerings_3__c</fullName>
        <description>TPA-MC-ESPSFDCTPA-454</description>
        <label>Vendor has a similar product or service?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitive_Service_to_IMS_Offerings__c</fullName>
        <label>Vendor has competing Product or Service</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirming_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Confirming Contact</label>
        <referenceTo>TPA_Contact__c</referenceTo>
        <relationshipLabel>TPA Requests (Confirming Contact)</relationshipLabel>
        <relationshipName>TPA_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ConirmingContactSameAsClientContact__c</fullName>
        <label>Conirming Contact Same As Client Contact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Please select from the below</fullName>
                </value>
                <value>
                    <fullName>Please Select a Value</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CopyAdditionalContactOnTransactions__c</fullName>
        <label>Copy Additional Contact on Transactions?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Please select from the below</fullName>
                </value>
                <value>
                    <fullName>Please Select a Value</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Copy_Additional_Vendor_Contacts__c</fullName>
        <label>Copy Additional Vendor Contacts?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Countries_of_offerings__c</fullName>
        <description>To store the countries of which offerings are selected. Created By TPA Module Under TPA-FEATURE-5</description>
        <label>Countries of offerings</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Co_Assigned_Global_TP_Processor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Co-Assigned Global TP Processor:</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>TPA_Assigned_TP_Processor__c.Is_Global_TP_Processor__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>TPA_Assigned_TP_Processor__c</referenceTo>
        <relationshipLabel>TPA Requests (Co-Assigned Global TP Processor:)</relationshipLabel>
        <relationshipName>TPA_Requests_Global</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DA_Requires_Manual_Review_Report__c</fullName>
        <formula>IF(DA_Requires_Manual_Review__c = TRUE, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DA Requires Manual Review Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DA_Requires_Manual_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DA Requires Manual Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DDDid__c</fullName>
        <description>Created by Ranu ER-905</description>
        <label>DDDid</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Please select from the below</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DDN_Ack_Pending_Requests__c</fullName>
        <label>DDN Ack Pending Requests</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DDN_Confirmation_Date__c</fullName>
        <label>DDN Confirmation - Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DataAssets_At_ClinetLocation__c</fullName>
        <label>Data Assets at Client Location?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Please select from the below</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Access_End_Date__c</fullName>
        <label>Data Access End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Access_Start_Date__c</fullName>
        <label>Data Access Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Accessed_Via_IMS_Licensed_Software__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data Accessed Via IMS Licensed Software</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Asset_List__c</fullName>
        <label>Data Asset List</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Data_Asset_Physical_Location__c</fullName>
        <description>Created By TPA Module Under TPA-FEATURE-5</description>
        <label>Data Asset Physical Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Asset_Requires_Fee_Report__c</fullName>
        <formula>IF(Data_Asset_Requires_Fee__c = TRUE, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Asset Requires Fee Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Asset_Requires_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data Asset Requires Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Asset_Restricted_Report__c</fullName>
        <formula>IF(Is_Restricted_Data_Asset__c = TRUE, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Asset Restricted Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Delivered_By_Other__c</fullName>
        <label>Other Data Transmission Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Data_Delivered_By__c</fullName>
        <label>Data Delivered By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email of encrypted file</fullName>
                </value>
                <value>
                    <fullName>Encrypted File on Removable / Portable Storage Device</fullName>
                </value>
                <value>
                    <fullName>N/A – Data will reside and be accessed from the client’s location</fullName>
                </value>
                <value>
                    <fullName>Secure FTP</fullName>
                </value>
                <value>
                    <fullName>VPN</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Extraction_Patient_Selection_Params__c</fullName>
        <inlineHelpText>Describe the patient sample extraction parameters (100% of patients withing a defined market or description of patient methodology) to be utilized.</inlineHelpText>
        <label>Data Extraction Patient Selection Params</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Data_Locations_at_offshore__c</fullName>
        <label>Data Locations at off -shore</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>